<resources>
    <string name="app_name">Oxford Dictionary</string>
    <string name="welcome_to_guide_me">Welcome To Oxford Dictionary</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="create_an_account">Create an account</string>
    <string name="password_reg">Password</string>
    <string name="email_reg">Email</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
