<?xml version="1.0" encoding="utf-8"?>

<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@drawable/background"
android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/FaceDetect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/create_an_account"
        android:textColor="#FFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/emailReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailReg"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="5dp"
        android:hint="@string/email_reg"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.753" />

    <EditText
        android:id="@+id/passwordReg"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:hint="@string/password_reg"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordRegConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailReg" />

    <EditText
        android:id="@+id/passwordRegConfirm"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordReg" />

    <Button
        android:id="@+id/register"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="326dp"
        android:text="Register"
        android:textColor="#FFF"
        android:background="#3143A6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordRegConfirm" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Have an account?"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:layout_marginLeft="5dp"
            android:textColor="#FFF"
            android:textStyle="bold"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>